Neuer Mechanismus zum setzen der Stärken Challenges haben jetzt ein Level